# griptape-nodes-library-template

./: pyproject.toml
example_nodes_template/: griptape-nodes-library.json
griptape_nodes_sam3D_library/: __init__.py  griptape-nodes-library.json  pig_latin.py
griptape_nodes_sam3D_library/widgets/: AnglePicker.js
