[project]
name = "griptape-nodes-sam3D-library"
version = "0.1.0"
description = "Griptape Node Library for SAM3D - 3D reconstruction from segmentation masks"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "griptape-nodes",
    "pygit2",
]
# Note: pytorch3d, trimesh, and other 3D dependencies are installed
# by sam3D_library_advanced.py at runtime via the submodule, not as pip dependencies

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"